<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/agro_expert"
                android:layout_marginBottom="@dimen/_5sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal_heading"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_5sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goals"
                android:layout_marginBottom="@dimen/_20sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Future Goals:"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_5sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Adding artificial intelligence(AI) to reduce repeated queries.
Creating dynamic FAQs.
Fetching additional information through geo-location.
Adding image processing algorithms."
                android:layout_marginBottom="@dimen/_20sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview_heading"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_5sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:layout_marginBottom="@dimen/_20sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_heading"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_5sdp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parshwa"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jaina"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priyanshi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaushal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sunny"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mohit"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shubham"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parth"/>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>