<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:cardElevation="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">


            <LinearLayout
                android:id="@+id/lnback"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_6sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/left_arrow" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_40sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/other"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:visibility="gone" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_profile">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:gravity="center"
            android:textSize="@dimen/_30sdp"
            android:background="#ddffd8"
            android:layout_margin="@dimen/_10sdp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_suggesions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Suggestions"
            android:gravity="center"
            android:textSize="@dimen/_30sdp"
            android:background="#ddffd8"
            android:layout_margin="@dimen/_10sdp"/>

    </LinearLayout>

</LinearLayout>


</LinearLayout>